--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>MaLache</title>
+	<title>MedLache</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 				</li>
 	
 				<li>
-					<a href="">Apps</a>
+					<a href="apps.html">Apps</a>
 					
 				</li>
 	
